added Filter reusable component

--- a/Frontend/OnlineExaminationSystem/package.json
+++ b/Frontend/OnlineExaminationSystem/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@popperjs/core": "^2.9.2",
     "angular-font-awesome": "^3.1.2",
     "angular-material": "^1.2.2",
