--- a/Frontend/OnlineExaminationSystem/angular.json
+++ b/Frontend/OnlineExaminationSystem/angular.json
@@ -31,7 +31,7 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/font-awesome/css/font-awesome.min.css"
+              "src/assets/fontawesome-free-5.15.3-web/css/all.min.css"
             ],
             "scripts": [
               "node_modules/@popperjs/core/dist/umd/popper.min.js",
