--- a/Frontend/OnlineExaminationSystem/angular.json
+++ b/Frontend/OnlineExaminationSystem/angular.json
@@ -34,9 +34,9 @@
               "src/assets/fontawesome-free-5.15.3-web/css/all.min.css"
             ],
             "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
               "node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./node_modules/jquery/dist/jquery.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
